--- a/dados.html
+++ b/dados.html
@@ -100,9 +100,7 @@
     >
   </div>
 
-  <button id="btnContinuar" class="botao-principal" disabled>
-    Continuar →
-  </button>
+  <button id="btnContinuar">Continuar</button>
 
 </div>
 
