--- a/dados.html
+++ b/dados.html
@@ -100,7 +100,7 @@
     >
   </div>
 
-  <button id="btnContinuar">Continuar</button>
+<button id="btnContinuar" class="btn-ia">Continuar</button>
 
 </div>
 
