--- a/dados.html
+++ b/dados.html
@@ -100,7 +100,9 @@
     >
   </div>
 
-<button id="btnContinuar" class="btn-ia">Continuar</button>
+  <button id="btnContinuar" class="botao-principal" disabled>
+    Continuar →
+  </button>
 
 </div>
 
