--- a/alimentos.html
+++ b/alimentos.html
@@ -50,14 +50,14 @@
   <!-- LINHA E SÍMBOLO -->
   <div class="titulo-central-wrapper">
   <div class="icone-dieta-topo">🥗</div>
-  <h1 class="titulo-central">Monte sua dieta</h1>
-  <p class="subtitulo-central">Selecione os alimentos que deseja ter na sua dieta</p>
-</div>
 
-  <!-- BARRA DE PROGRESSO -->
-  <div class="progresso">
-    <div class="progresso-barra" id="barraProgresso"></div>
-  </div>
+  <h1 class="titulo-central">Monte sua dieta</h1>
+  <p class="subtitulo-central">
+    Selecione os alimentos que deseja ter na sua dieta
+  </p>
+
+  <div class="regua"></div>
+</div>
 
   <!-- CAFÉ DA MANHÃ -->
 <section class="bloco-refeicao">
