--- a/alimentos.html
+++ b/alimentos.html
@@ -111,11 +111,11 @@
   <section class="bloco-refeicao">
     <h2 class="titulo-refeicao">Sobremesa</h2>
    
-    <div class="grid" id="Sobremesa"></div>
+    <div class="grid" id="sobremesa"></div>
    
     <div class="add-box">
       <input placeholder="Adicionar alimento">
-      <button onclick="adicionar(this,'Sobremesa')">+</button>
+      <button onclick="adicionar(this,'sobremesa')">+</button>
     </div>
   </section>
 
@@ -123,11 +123,11 @@
   <section class="bloco-refeicao">
     <h2 class="titulo-refeicao">Suplementos</h2>
      
-    <div class="grid" id="Suplementos"></div>
+    <div class="grid" id="suplementos"></div>
    
     <div class="add-box">
       <input placeholder="Adicionar alimento">
-      <button onclick="adicionar(this,'Suplementos')">+</button>
+      <button onclick="adicionar(this,'suplementos')">+</button>
     </div>
   </section>
 
