--- a/carregando.html
+++ b/carregando.html
@@ -17,26 +17,15 @@
       </svg>
     </div>
 
-    <h1 class="p4-titulo">Dados enviados ao Nutricionista de Plantão</h1>
+    <h1 class="p4-titulo">Dados enviados ao Nutricionista de Plantão.</h1>
 
     <p class="p4-texto">
-      Suas medidas e seus alimentos escolhidos foram enviados para um nutricionista
-      de plantão, onde ele vai analisar e ajustar sua dieta de acordo com seu
-      <strong>OBJETIVO</strong>.
+      Seus dados e suas escolhas foram enviados a um Nutricionista de plantão.
+      Alerta: Não pedimos código via redes sociais, seus dados de acesso ao App NUTRI+ será enviado via E-mail após a escolha do seu plano.
+      Já está sendo planejado sua dieta de acordo com seu
+      <strong>OBJETIVO!</strong>.
     </p>
-
-    <div class="p4-silhuetas">
-      <img src="img/silhueta-feminina.png" alt="Silhueta feminina">
-      <img src="img/silhueta-masculina.png" alt="Silhueta masculina">
-    </div>
-
-    <div class="p4-alertas">
-      <strong>Alertas:</strong><br>
-      Não pedimos código por e-mail nem por WhatsApp.<br>
-      Gere sempre o comprovante de pagamento em casos de erros.<br>
-      Seus dados, acesso ao App Nutri+ e PDF da dieta serão enviados por e-mail após o pagamento.
-    </div>
-
+    
     <!-- botão com JS -->
     <button class="btn-continuar p4-btn" id="p4Continuar">
       Continuar →
