--- a/alimentos.html
+++ b/alimentos.html
@@ -133,7 +133,7 @@
 
   <!-- BOTÃO FINAL -->
   <button class="btn-ver-dieta" onclick="finalizar()">
-  Gerar dieta Agora
+  Gerar dieta Agora →
 </button>
 
 
