--- a/carregando.html
+++ b/carregando.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Envio concluído</title>
+<title>Análise iniciada</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="css/estilo.css">
 </head>
@@ -11,22 +11,26 @@
 
   <div class="p4-container">
 
+    <!-- VERIFICADO (NÃO MEXIDO) -->
     <div class="p4-icon-check">
       <svg viewBox="0 0 24 24" aria-hidden="true">
         <path d="M9 16.2l-3.5-3.5L4 14.2 9 19l12-12-1.5-1.5z"/>
       </svg>
     </div>
 
-    <h1 class="p4-titulo">Dados enviados ao Nutricionista de Plantão.</h1>
+    <h1 class="p4-titulo">Análise nutricional iniciada</h1>
 
     <p class="p4-texto">
-      Seus dados e suas escolhas foram enviados a um Nutricionista de plantão.
-      Alerta: Não pedimos código via redes sociais, seus dados de acesso ao App NUTRI+ será enviado via E-mail após a escolha do seu plano.
-      Já está sendo planejado sua dieta de acordo com seu
-      <strong>OBJETIVO!</strong>.
+      Suas informações foram recebidas com sucesso e já estão em análise por um
+      nutricionista de plantão, considerando seu perfil e objetivo alimentar.
     </p>
-    
-    <!-- botão com JS -->
+
+    <p class="p4-texto-sec">
+      O acesso ao App Nutri+ e seu plano alimentar personalizado serão liberados
+      após a finalização da etapa seguinte.
+    </p>
+
+    <!-- BOTÃO = MESMO DA PÁGINA 2 -->
     <button class="btn-continuar p4-btn" id="p4Continuar">
       Continuar →
     </button>
